BPER/DEVF/force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <label>Portafoglio Assegnato</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portafogli Assegnati</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>