BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Dimensione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Dimensione__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Filiale__r.PTF_Dimensione__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimensione Filiale</label>
    <type>Text</type>
</CustomField>