BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Filiale__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>