BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Gestore_Name__c.field-meta.xml
<CustomField>
    <fullName>PTF_Gestore_Name__c</fullName>
    <formula>PTF_Gestore__r.FirstName + &quot; &quot; + PTF_Gestore__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTF_Gestore_Name</label>
    <type>Text</type>
</CustomField>