BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_GestoreBackup__c.field-meta.xml
<CustomField>
    <fullName>PTF_GestoreBackup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestore di backup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Backup</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assegnamenti (Gestore di backup)</relationshipLabel>
    <relationshipName>Backup_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>