BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_IsPool__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsPool__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Pool__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPool</label>
    <type>Checkbox</type>
</CustomField>