BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_MicroWallet__c.field-meta.xml
<CustomField>
    <fullName>PTF_MicroWallet__c</fullName>
    <label>Microportafoglio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Wallet__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MicroWallet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Assegnamenti</relationshipLabel>
    <relationshipName>Backup_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>