BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_MiniPortafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_MiniPortafoglio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MiniWallet</label>
    <referenceTo>MiniWallet__c</referenceTo>
    <relationshipLabel>Assegnamenti</relationshipLabel>
    <relationshipName>Assegnamenti</relationshipName>
    <type>Lookup</type>
</CustomField>