BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>PTF_ModelloDiServizio__c</fullName>
    <formula>TEXT( PTF_MicroWallet__r.PTF_ModelloDiServizio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro-modello di servizio</label>
    <type>Text</type>
</CustomField>