BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Nome_Area__c.field-meta.xml
<CustomField>
    <fullName>PTF_Nome_Area__c</fullName>
    <description>Nome dell&apos;area del Portafoglio.</description>
    <formula>PTF_MicroWallet__r.PTF_Area__r.Name</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>