BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Nome_Banca__c.field-meta.xml
<CustomField>
    <fullName>PTF_Nome_Banca__c</fullName>
    <description>Nome della Banca del Portafoglio</description>
    <formula>PTF_MicroWallet__r.PTF_Banca__r.Name</formula>
    <label>Banca</label>
    <type>Text</type>
</CustomField>