BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Nome_Capofila__c.field-meta.xml
<CustomField>
    <fullName>PTF_Nome_Capofila__c</fullName>
    <description>Nome della Filiale Capofila del Portafoglio</description>
    <formula>PTF_MicroWallet__r.PTF_Capofila__r.Name</formula>
    <label>Capofila</label>
    <type>Text</type>
</CustomField>