BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Nome_Dir_Terr__c.field-meta.xml
<CustomField>
    <fullName>PTF_Nome_Dir_Terr__c</fullName>
    <description>Nome della Direzione Territoriale del Portafoglio</description>
    <formula>PTF_MicroWallet__r.PTF_DirezioneRegionale__r.Name</formula>
    <label>Direzione Regionale</label>
    <type>Text</type>
</CustomField>