BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_NomePortafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_NomePortafoglio__c</fullName>
    <formula>PTF_MicroWallet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome portafoglio</label>
    <type>Text</type>
</CustomField>