BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Num_NDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_Num_NDG__c</fullName>
    <description>Numero di NDG sul portafoglio</description>
    <formula>PTF_MicroWallet__r.CRM_numNDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero di NDG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>