BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReferenteName__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReferenteName__c</fullName>
    <formula>PTF_Gestore__r.FirstName + &quot; &quot; + PTF_Gestore__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nominativo Referente</label>
    <type>Text</type>
</CustomField>