BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReferenteOFS__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReferenteOFS__c</fullName>
    <formula>PTF_Gestore__r.PTF_OFS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente OFS</label>
    <type>Checkbox</type>
</CustomField>