BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_Referenteprincipalesuminiportafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Referenteprincipalesuminiportafoglio__c</fullName>
    <formula>IF( PTF_Gestore__c = PTF_MiniPortafoglio__r.Referente__c , 
	true, 
	false)</formula>
    <label>Referente principale su miniportafoglio</label>
    <type>Checkbox</type>
</CustomField>