BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReportArea__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReportArea__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Area__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>