BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReportBanca__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReportBanca__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Banca__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banca</label>
    <type>Text</type>
</CustomField>