BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReportDR__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReportDR__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DirezioneRegionale</label>
    <type>Text</type>
</CustomField>