BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_ReportFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReportFiliale__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Filiale__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>