BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/PTF_StartDate_DT__c.field-meta.xml
<CustomField>
    <fullName>PTF_StartDate_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date (DateTime)</label>
    <type>DateTime</type>
</CustomField>