BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/User_Gestore_Backup__c.field-meta.xml
<CustomField>
    <fullName>User_Gestore_Backup__c</fullName>
    <formula>RecordType.Name = &apos;Backup&apos; &amp;&amp;  PTF_Gestore__r.PTF_User__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Gestore Backup</label>
    <type>Checkbox</type>
</CustomField>