BPER/DEVF/force-app/main/default/objects/Assignment__c/fields/User_Gestore_Principale__c.field-meta.xml
<CustomField>
    <fullName>User_Gestore_Principale__c</fullName>
    <formula>RecordType.Name = &apos;Primario&apos; &amp;&amp; PTF_Gestore__r.PTF_User__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Gestore Principale</label>
    <type>Checkbox</type>
</CustomField>