BPER/DEVF/force-app/main/default/objects/Assignment__c/recordTypes/Backup.recordType-meta.xml
<RecordType>
    <fullName>Backup</fullName>
    <active>true</active>
    <label>Backup</label>
</RecordType>