BPER/DEVF/force-app/main/default/objects/Assignment__c/recordTypes/Primario.recordType-meta.xml
<RecordType>
    <fullName>Primario</fullName>
    <active>true</active>
    <label>Primario</label>
</RecordType>